[UPDATE] Update Input search component with suggestion (without API yet)

--- a/src/app/components/buttons/button/button.component.scss
+++ b/src/app/components/buttons/button/button.component.scss
@@ -1,8 +1,8 @@
-@import "../../../../../public/assets/sass/abstracts/variables";
+@use "../../../../../public/assets/sass/abstracts/variables";
 
 button {
-    background-color: $surface-400;
-    color: $surface-50;
+    background-color: variables.$surface-400;
+    color: variables.$surface-50;
     padding: 12px 0px;
     border-radius: 8px;
     width: 100%;
@@ -10,7 +10,7 @@ button {
     font-size: 18px;
 
     &:hover {
-        background-color: $surface-300;
+        background-color: variables.$surface-300;
         transition: .4s background-color;
     }
 }
