--- a/src/app/components/inputs/input-search/input-search.component.html
+++ b/src/app/components/inputs/input-search/input-search.component.html
@@ -1,14 +1,13 @@
 <div class="flex flex-row items-center">
     <button (click)="onClick()">
-        <svg xmlns="http://www.w3.org/2000/svg" [attr.width]="iconWidth()" [attr.height]="iconWidth()" viewBox="0 0 24 24" fill="none">
+        <svg xmlns="http://www.w3.org/2000/svg" [attr.width]="iconWidth()" [attr.height]="iconWidth()"
+            viewBox="0 0 24 24" fill="none">
             <path
                 d="M21 21L16.65 16.65M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z"
                 stroke="#66707A" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
     </button>
-    <input 
-        type="text" 
-        [placeholder]="placeholder()" 
-        [formControl]="control()"
-        class="search-input focus:outline-none">
+    <ng-select class="search-select" [items]="cities" [searchFn]="customSearchFn" bindLabel="name" [placeholder]="placeholder()"
+        [(ngModel)]="selectedCity">
+    </ng-select>
 </div>
