--- a/src/app/components/inputs/input/input.component.scss
+++ b/src/app/components/inputs/input/input.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../public/assets/sass/abstracts/variables";
+@use "../../../../../public/assets/sass/abstracts/variables";
 
 label {
     font-size: 24px;
@@ -7,7 +7,7 @@ label {
         &::after {
             padding-left: 5px;
             content: '*';
-            color: $danger-300;
+            color: variables.$danger-300;
         }
     }
 }
@@ -15,15 +15,15 @@ label {
 input {
     font-size: 16px;
 
-    border: 1px solid $surface-200;
+    border: 1px solid variables.$surface-200;
     border-radius: 8px;
     padding: 12px 16px;
 
     &::placeholder {
-        color: $surface-200;
+        color: variables.$surface-200;
     }
 
     &.error {
-        border-color: $danger-200;
+        border-color: variables.$danger-200;
     }
 }
