--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -7,15 +7,16 @@
 <div>
     <form [formGroup]="signInForm" action="">
         <app-input type="text" label="Email" placeholder="Email" required="required" [control]="email"></app-input>
-        <app-input type="password" label="Password" placeholder="Password" required="required" [control]="password"></app-input>
+        <app-input type="password" label="Password" placeholder="Password" required="required"
+            [control]="password"></app-input>
         <app-button>
             <span class="uppercase">Sign In</span>
         </app-button>
     </form>
-    <div class="my-3">
-        {{ search.value }}
-    </div>
     <form [formGroup]="searchForm">
-        <app-input-search placeholder="Search" [control]="search" (buttonSearchClick)="onButtonSearchClick($event)"></app-input-search>
+        <app-input-search placeholder="Search" (searchSelect)="onButtonSearchClick($event)"></app-input-search>
     </form>
+</div>
+
+<div class="mt-3">
 </div>
