--- a/src/app/components/buttons/button/button.component.scss
+++ b/src/app/components/buttons/button/button.component.scss
@@ -6,6 +6,7 @@ button {
     padding: 12px 0px;
     border-radius: 8px;
     width: 100%;
+    min-width: 135px;
     cursor: pointer;
     font-size: 18px;
 
