--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -18,5 +18,8 @@
     </form>
 </div>
 
-<div class="mt-3">
+<div class="mt-3 flex">
+    <app-tag>Tag 1</app-tag>
+    <app-add-tag addTagModalTitle="Add Tag"></app-add-tag>
+    <app-add-tag addTagModalTitle="Select Tags"></app-add-tag>
 </div>
