--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @use "tailwindcss";
 @use "@ng-select/ng-select/themes/default.theme.css";
+@use "ng-zorro-antd/ng-zorro-antd.min.css";
