--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -23,3 +23,7 @@
     <app-add-tag addTagModalTitle="Add Tag"></app-add-tag>
     <app-add-tag addTagModalTitle="Select Tags"></app-add-tag>
 </div>
+
+<div class="mt-3 w-[400px]">
+    <app-menu-task></app-menu-task>
+</div>
