--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -27,3 +27,10 @@
 <div class="mt-3 w-[400px]">
     <app-menu-task></app-menu-task>
 </div>
+
+<div class="mt-3 w-[500px]">
+    <app-task-item content="Go to the market" [subtaskQuantity]="2" [tags]="['Market', 'Work', 'Market', 'Work', 'Market', 'Work']" [isDone]="true"
+        [isImportant]="false" [isSelectedItem]="true" (taskItemEventEmitter)="openTaskItemDetails()"></app-task-item>
+    <app-task-item content="Go to work" [tags]="['Work']" [isDone]="false" [isImportant]="false"
+        (taskItemEventEmitter)="openTaskItemDetails()"></app-task-item>
+</div>
