--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -1,9 +1,3 @@
-<p>signin works!</p>
-
-<h1 class="text-3xl font-bold underline">
-    Hello world, {{ email.value }}!
-</h1>
-
 <div>
     <form [formGroup]="signInForm" action="">
         <app-input type="text" label="Email" placeholder="Email" required="required" [control]="email"></app-input>
@@ -29,8 +23,9 @@
 </div>
 
 <div class="mt-3 w-[500px]">
-    <app-task-item content="Go to the market" [subtaskQuantity]="2" [tags]="['Market', 'Work', 'Market', 'Work', 'Market', 'Work']" [isDone]="true"
-        [isImportant]="false" [isSelectedItem]="true" (taskItemEventEmitter)="openTaskItemDetails()"></app-task-item>
+    <app-task-item content="Go to the market" [subtaskQuantity]="2" [tags]="['Market', 'Work', 'kk', 'ggg', 'uu', 'll']"
+        [isDone]="true" [isImportant]="false" [isSelectedItem]="true" (taskItemEventEmitter)="openTaskItemDetails()"
+        (doneTaskEventEmitter)="toggleDoneTask($event)" (importantTaskEventEmitter)="toggleImportantTask($event)"></app-task-item>
     <app-task-item content="Go to work" [tags]="['Work']" [isDone]="false" [isImportant]="false"
-        (taskItemEventEmitter)="openTaskItemDetails()"></app-task-item>
+        (taskItemEventEmitter)="openTaskItemDetails()" (doneTaskEventEmitter)="toggleDoneTask($event)"></app-task-item>
 </div>
