--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -37,4 +37,20 @@
     <div class="mt-3">
         <app-date-picker (dateChangeEventEmit)="changeDate($event)"></app-date-picker>
     </div>
+
+    <div class="mt-3 w-[500px]">
+        <app-subtask [subtasksList]="[
+            {
+                'id': 'abcdef',
+                'name': 'Buy rice',
+                'isDone': true
+            },
+            {
+                'id': 'kfc',
+                'name': 'Buy fish',
+                'isDone': false
+            }
+            ]" (doneSubtaskEventEmitter)="toggleDoneSubtask($event)" (addNewSubtaskEventEmitter)="addNewSubtask($event)"
+            (deleteSubtaskEventEmitter)="deleteSubtask($event)"></app-subtask>
+    </div>
 </div>
