[FEAT] Create Avatar Profile component

--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -53,4 +53,8 @@
             ]" (doneSubtaskEventEmitter)="toggleDoneSubtask($event)" (addNewSubtaskEventEmitter)="addNewSubtask($event)"
             (deleteSubtaskEventEmitter)="deleteSubtask($event)"></app-subtask>
     </div>
+
+    <div class="mt-3">
+        <app-avatar-profile username="Melvin" avatarSrc="../assets/images/avatar.jpg"></app-avatar-profile>
+    </div>
 </div>
