[FEAT] Create Avatar Profile, Account components, Fullname pipe

--- a/src/app/components/avatar-profile/avatar-profile.component.html
+++ b/src/app/components/avatar-profile/avatar-profile.component.html
@@ -1,6 +1,11 @@
 <div class="avatar-profile flex flex-row items-center">
-    <img [src]="avatarSrc()" width="45" height="45" class="avatar-img" draggable="false" />
-    <span class="username">
-        {{ username() }}
-    </span>
+        <img [src]="avatarSrc()" width="45" height="45" class="avatar-img" draggable="false" />
+    <div class="username-profile flex flex-col">
+        <span class="username">
+            {{ username() }}
+        </span>
+        <span class="user-id">
+            &#64;{{ userId() }}
+        </span>
+    </div>
 </div>
