--- a/src/app/components/buttons/button/button.component.html
+++ b/src/app/components/buttons/button/button.component.html
@@ -1,3 +1,11 @@
-<button type="submit" [style.background-color]="buttonType() === 'Default' ? '#202327' : buttonType() === 'Cancel' ? '#66707A' : '#F2AB53'">
-    <ng-content></ng-content>
+<button [type]="buttonAction()"
+    [style.background-color]="buttonType() === 'Default' ? '#202327' : buttonType() === 'Cancel' ? '#66707A' : buttonType() === 'Ok' ? '#F2AB53' : '#fff'"
+    [style.color]="buttonType() === 'Outline' ? '#202327' : '#fff'"
+    [style.border]="buttonType() === 'Outline' && '1px solid #202327'"
+    [style.padding]="buttonSize() === 'sm' && '0'"
+    [style.width]="buttonSize() === 'sm' && '95px'"
+    [style.min-width]="buttonSize() === 'sm' && '95px'">
+    <span [style.font-size]="buttonSize() === 'sm' && '14px'">
+        <ng-content></ng-content>
+    </span>
 </button>
