--- a/src/app/components/inputs/input/input.component.scss
+++ b/src/app/components/inputs/input/input.component.scss
@@ -14,10 +14,11 @@ label {
 
 input {
     font-size: 16px;
-
+    width: 100%;
     border: 1px solid variables.$surface-200;
     border-radius: 8px;
     padding: 12px 16px;
+    height: 40px;
 
     &::placeholder {
         color: variables.$surface-200;
