--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -55,6 +55,10 @@
     </div>
 
     <div class="mt-3">
-        <app-avatar-profile username="Melvin" avatarSrc="../assets/images/avatar.jpg"></app-avatar-profile>
+        <app-avatar-profile username="Melvin" avatarSrc="../assets/images/avatar.jpg" (click)="openAccountModal()" class="cursor-pointer"></app-avatar-profile>
+    </div>
+
+    <div class="mt-3">
+        <app-account (changeAccountEventEmitter)="updateAccount($event)"></app-account>
     </div>
 </div>
