[UPDATE] Change UserId to Username in Avatar Profile, Account components

--- a/src/app/components/modals/account/account.component.html
+++ b/src/app/components/modals/account/account.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="content">
             <div class="fullname">{{ account().firstName | fullName : account().lastName }}</div>
-            <div class="user-id">&#64;{{ account().id }}</div>
+            <div class="user-id">&#64;{{ account().username }}</div>
             <form>
                 <div class="form-group grid grid-cols-6 items-center">
                     <span class="title">Name</span>
