--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="mt-3">
-        <app-avatar-profile username="Melvin" avatarSrc="../assets/images/avatar.jpg" (click)="openAccountModal()" class="cursor-pointer"></app-avatar-profile>
+        <app-avatar-profile firstName="Melvin" avatarSrc="../assets/images/avatar.jpg" (click)="openAccountModal()" class="cursor-pointer"></app-avatar-profile>
     </div>
 
     <div class="mt-3">
