--- a/src/app/components/avatar-profile/avatar-profile.component.scss
+++ b/src/app/components/avatar-profile/avatar-profile.component.scss
@@ -7,13 +7,13 @@
         margin-right: 15px;
     }
 
-    .username {
+    .fullname {
         font-size: 24px;
         font-weight: bold;
         line-height: 25px;
     }
 
-    .user-id {
+    .username {
         font-size: 14px;
         color: variables.$surface-200;
     }
