--- a/src/app/components/buttons/button/button.component.html
+++ b/src/app/components/buttons/button/button.component.html
@@ -4,7 +4,9 @@
     [style.border]="buttonType() === 'Outline' && '1px solid #202327'"
     [style.padding]="buttonSize() === 'sm' && '0'"
     [style.width]="buttonSize() === 'sm' && '95px'"
-    [style.min-width]="buttonSize() === 'sm' && '95px'">
+    [style.min-width]="buttonSize() === 'sm' && '95px'"
+    [class.disabled]="disabled()"
+    [disabled]="disabled()">
     <span [style.font-size]="buttonSize() === 'sm' && '14px'">
         <ng-content></ng-content>
     </span>
