--- a/src/app/components/inputs/input/input.component.html
+++ b/src/app/components/inputs/input/input.component.html
@@ -1,6 +1,6 @@
 @if (label()) {
     <div>
-        <label class="required">{{ label() }}</label>
+        <label [class.required]="required() === 'required'">{{ label() }}</label>
     </div>
 }
 <input 
@@ -9,5 +9,5 @@
     [formControl]="control()" 
     [type]="type()" 
     [placeholder]="placeholder()" 
-    [required]="required() == 'required' ? true : false">
+    [required]="required() === 'required' ? true : false">
 <app-error-message [control]="control()" [fieldTitle]="placeholder()"></app-error-message>
