--- a/src/app/pages/auth/signup/signup.component.scss
+++ b/src/app/pages/auth/signup/signup.component.scss
@@ -56,7 +56,7 @@
                     grid-area: password;
                 }
 
-                app-button {
+                app-spinner {
                     grid-area: button;
                     margin-top: 13px;
                 }
