--- a/src/app/pages/auth/verify-email/verify-email.component.scss
+++ b/src/app/pages/auth/verify-email/verify-email.component.scss
@@ -34,7 +34,7 @@
             color: variables.$surface-200;
         }
         
-        app-button {
+        app-spinner {
             margin-top: 34px;
             width: 100%;
             padding: 0 70px;
