--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -13,7 +13,12 @@
                 <div class="forgot-password">
                     Forgot password?
                 </div>
-                <app-button>SIGN IN</app-button>
+                <div class="error-response-message" [class.hidden]="errorMessage.length === 0">
+                    {{ errorMessage }}
+                </div>
+                <app-spinner [isLoading]="isLoading">
+                    <app-button (click)="signIn()">SIGN IN</app-button>
+                </app-spinner>
             </form>
         </div>
         <div class="go-to-signup">Not a member?&nbsp;<a routerLink="/signup">Sign Up</a></div>
