--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -5,8 +5,8 @@
         </div>
         <div class="inputs">
             <form>
-                <app-input class="first-name" type="text" label="First Name" placeholder="First name" required="required"
-                    [control]="firstName"></app-input>
+                <app-input class="first-name" type="text" label="First Name" placeholder="First name"
+                    required="required" [control]="firstName"></app-input>
                 <app-input class="last-name" type="text" label="Last Name" placeholder="Last name" required="optional"
                     [control]="lastName"></app-input>
                 <app-input class="username" type="text" label="Username" placeholder="Username" required="required"
@@ -17,7 +17,9 @@
                     [control]="email"></app-input>
                 <app-input class="password" type="password" label="Password" placeholder="Password" required="required"
                     [control]="password"></app-input>
-                <app-button (click)="signUp()" buttonAction="button">SIGN UP</app-button>
+                <app-spinner [isLoading]="isLoading">
+                    <app-button (click)="signUp()" buttonAction="button">SIGN UP</app-button>
+                </app-spinner>
             </form>
         </div>
         <div class="go-to-signin">Already have an account?&nbsp;<a routerLink="/signin">Sign In</a></div>
