[FEAT] Create Today todo task component, Create sidebar components, Create Auth Route Guard

--- a/src/app/components/date-picker/date-picker.component.scss
+++ b/src/app/components/date-picker/date-picker.component.scss
@@ -3,6 +3,7 @@
         border: 0px;
         padding-right: 0;
         padding-left: 0;
+        background-color: transparent;
 
         &.ant-picker-focused {
             box-shadow: none;
