--- a/src/app/components/task/task-item/task-item.component.scss
+++ b/src/app/components/task/task-item/task-item.component.scss
@@ -2,7 +2,7 @@
 
 .task-item {
     padding: 5px 0px;
-    border-top: 1px solid variables.$surface-200;
+    border-top: 2px solid variables.$grey-100;
 
     .task-item-content {
         padding: 5px 10px;
