--- a/src/app/components/inputs/input-search/input-search.component.scss
+++ b/src/app/components/inputs/input-search/input-search.component.scss
@@ -2,7 +2,7 @@
 
 .search-input {
     margin-left: 15px;
-    font-size: 20px;
+    font-size: 15px;
 
     &::placeholder {
         color: variables.$surface-200;
@@ -23,12 +23,13 @@ button {
 
 .search-select {
     width: 100%;
-    margin-left: 15px;
-    font-size: 20px;
+    margin-left: 10px;
+    font-size: 15px;
 
     ::ng-deep.ng-select-container {
         box-shadow: none !important;
         border: none !important;
+        background-color: transparent;
 
         &:hover {
             box-shadow: none;
