--- a/src/app/components/modals/account/account.component.html
+++ b/src/app/components/modals/account/account.component.html
@@ -5,7 +5,7 @@
             <img class="profile-avatar" [src]="avatar.value" width="100" height="100" draggable="false" />
         </div>
         <div class="content">
-            <div class="fullname">{{ account().firstName | fullName : account().lastName }}</div>
+            <div class="fullname">{{ account().firstName | fullName : account().lastName ?? "" }}</div>
             <div class="user-id">&#64;{{ account().username }}</div>
             <form>
                 <div class="form-group grid grid-cols-6 items-center">
