--- a/src/app/components/subtask/subtask.component.html
+++ b/src/app/components/subtask/subtask.component.html
@@ -1,6 +1,6 @@
 <div class="subtask flex flex-col">
     <div class="title">Subtasks ({{ subtasksList().length }})</div>
-    <div class="add-new-subtask flex flex-row items-center">
+    <div class="add-new-subtask flex flex-row items-center ms-[20px]">
         <svg class="cursor-pointer" (click)="addNewSubtask()" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
             viewBox="0 0 20 20" fill="none">
             <path d="M9.99996 4.16667V15.8333M4.16663 10H15.8333" stroke="#66707A" stroke-width="2"
@@ -8,7 +8,7 @@
         </svg>
         <input type="text" [(ngModel)]="newSubtask" placeholder="Add New Subtask">
     </div>
-    <div class="subtasks-list">
+    <div class="subtasks-list ms-[20px]">
         @for (subtaskItem of subtasksList(); track subtaskItem.id) {
         <div class="subtask-item flex flex-row justify-between items-center">
             <div class="flex flex-row items-center">
@@ -16,7 +16,7 @@
                     (change)="toggleDoneSubtask($event, subtaskItem.id)">
                 <span>{{ subtaskItem.name }}</span>
             </div>
-            <svg class="cursor-pointer" (click)="deleteSubtask(subtaskItem.id)" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+            <svg class="cursor-pointer" (click)="deleteSubtask(subtaskItem.id)" xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 14 14" fill="none">
                 <path d="M12 2L2 12M2 2L12 12" stroke="#66707A" stroke-width="3" stroke-linecap="round"
                     stroke-linejoin="round" />
             </svg>
