--- a/src/app/components/tag/tag.component.scss
+++ b/src/app/components/tag/tag.component.scss
@@ -2,8 +2,8 @@
 
 .tag {
     border-radius: 7px;
-    padding: 9px 10px;
-    min-width: 70px;
+    padding: 7px;
+    min-width: 55px;
     font-size: 16px;
     width: fit-content;
     height: 100%;
