--- a/src/app/components/sidebar/menu-task-items/menu-task-items.component.scss
+++ b/src/app/components/sidebar/menu-task-items/menu-task-items.component.scss
@@ -7,6 +7,11 @@
     padding: 7px 10px;
     border-radius: 7px;
 
+    &.menu-task-items-collapsed {
+        width: fit-content;
+        height: 37px;
+    }
+
     &:hover {
         background-color: variables.$grey-50;
     }
