--- a/src/app/components/sidebar/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar/sidebar.component.html
@@ -1,43 +1,56 @@
-<div class="sidebar flex flex-col justify-between">
+<div class="sidebar flex flex-col justify-between" #sidebar>
     <div class="top-sidebar">
         <div class="top-header-sidebar flex flex-row justify-between items-center">
             <div class="avatar-section">
                 <app-avatar-profile [firstName]="user.firstName" [username]="user.username"
-                    avatarSrc="../assets/images/avatar.jpg" (click)="openAccountModal()"
+                    avatarSrc="../assets/images/avatar.jpg" [isCollapsed]="isCollapsed" (click)="openAccountModal()"
                     class="cursor-pointer"></app-avatar-profile>
                 <app-account (changeAccountEventEmitter)="updateAccount($event)" [account]="user"></app-account>
             </div>
-            <div class="hamburger-menu cursor-pointer" (click)="closeLeftSidebar()">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                    <path d="M3.49988 11.9307H20.8749M3.49988 6.15527H20.8749M3.49988 17.7062H20.8749" stroke="#66707A"
-                        stroke-width="2.17188" stroke-linecap="round" stroke-linejoin="round" />
-                </svg>
+            <div class="hamburger-menu cursor-pointer" (click)="closeLeftSidebar(isCollapsed)">
+                @if (!isCollapsed) {
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path d="M3.49988 11.9307H20.8749M3.49988 6.15527H20.8749M3.49988 17.7062H20.8749" stroke="#66707A"
+                            stroke-width="2.17188" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                } @else {
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 23" fill="none">
+                        <path d="M9.40308 16.9441L15.035 11.3121L9.40308 5.68018" stroke="#66707A" stroke-width="2.25279"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                }
             </div>
         </div>
         <div class="menu-title">Menu</div>
         <div class="search-section">
             <form [formGroup]="searchForm">
-                <app-input-search placeholder="Search" [control]="search"
-                    (searchSelect)="onButtonSearchClick($event)"></app-input-search>
+                <app-input-search placeholder="Search" [control]="search" (searchSelect)="onButtonSearchClick($event)"
+                    [isCollapsed]="isCollapsed"></app-input-search>
             </form>
         </div>
         <div class="menu-task-section">
             <div class="menu-task-title">TASKS</div>
-            <app-menu-task (navigateEventEmitter)="navigateToTaskPage($event)"></app-menu-task>
+            <app-menu-task (navigateEventEmitter)="navigateToTaskPage($event)"
+                [isCollapsed]="isCollapsed"></app-menu-task>
         </div>
         <div class="tags-list flex flex-col">
             <div class="tags-list-title">TAGS</div>
             <div class="flex flex-row gap-[7px] flex-wrap">
+                @if (!isCollapsed) {
                 @for (tag of tags; track tag.id) {
-                    <app-tag [tagId]="tag.id">{{ tag.name }}</app-tag>
+                <app-tag [tagId]="tag.id">{{ tag.name }}</app-tag>
                 }
                 <app-add-tag addTagModalTitle="Add Tag"></app-add-tag>
+                } @else {
+                <app-tag [isCollapsed]="isCollapsed">{{ '...' }}</app-tag>
+                }
             </div>
         </div>
     </div>
     <div class="bottom-sidebar">
-        <app-menu-task-items title="Settings" [isSelected]="isSelectedSettings" (clickEventEmitter)="navigateToSettings()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+        <app-menu-task-items [title]="isCollapsed ? '' : 'Settings'" [isSelected]="isSelectedSettings"
+            (clickEventEmitter)="navigateToSettings()" [isCollapsed]="isCollapsed">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none" [nzTooltipTitle]="'Settings'" nzTooltipPlacement="right" nz-tooltip [nzTooltipTrigger]="isCollapsed ? 'hover' : null">
                 <path
                     d="M8.68748 10.8593C9.88698 10.8593 10.8594 9.88692 10.8594 8.68742C10.8594 7.48793 9.88698 6.51555 8.68748 6.51555C7.48799 6.51555 6.51561 7.48793 6.51561 8.68742C6.51561 9.88692 7.48799 10.8593 8.68748 10.8593Z"
                     stroke="#66707A" stroke-width="1.8099" stroke-linecap="round" stroke-linejoin="round" />
@@ -46,8 +59,9 @@
                     stroke="#66707A" stroke-width="1.8099" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
         </app-menu-task-items>
-        <app-menu-task-items title="Sign Out" [isSelected]="false" (clickEventEmitter)="signOut()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+        <app-menu-task-items [title]="isCollapsed ? '' : 'Sign Out'" [isSelected]="false"
+            (clickEventEmitter)="signOut()" [isCollapsed]="isCollapsed">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none" [nzTooltipTitle]="'Sign Out'" nzTooltipPlacement="right" nz-tooltip [nzTooltipTrigger]="isCollapsed ? 'hover' : null">
                 <path
                     d="M6.85401 15.7323H3.95817C3.57416 15.7323 3.20588 15.5802 2.93434 15.3094C2.6628 15.0386 2.51025 14.6714 2.51025 14.2884V4.18141C2.51025 3.79847 2.6628 3.43122 2.93434 3.16045C3.20588 2.88967 3.57416 2.73755 3.95817 2.73755H6.85401M11.9217 12.8446L15.5415 9.23493M15.5415 9.23493L11.9217 5.62527M15.5415 9.23493H6.85401"
                     stroke="#66707A" stroke-width="1.8099" stroke-linecap="round" stroke-linejoin="round" />
