--- a/src/app/components/tag/tag.component.html
+++ b/src/app/components/tag/tag.component.html
@@ -1,3 +1,3 @@
-<nz-tag [class]="hoverColorString" [nzColor]="color()">
+<nz-tag [class]="hoverColorString" [class.tag-collapsed]="isCollapsed()" [nzColor]="color()">
     <ng-content></ng-content>
 </nz-tag>
