[FEAT][FIX] Create Add tag feature, Fix throw Error from Auth interceptor, Create Compare objects helper

--- a/src/app/pages/todo-task/today/today.component.html
+++ b/src/app/pages/todo-task/today/today.component.html
@@ -1,6 +1,6 @@
 <section class="todo-task-today flex flex-row justify-between">
     <div class="left-sidebar">
-        <app-sidebar></app-sidebar>
+        <app-sidebar [user]="user"></app-sidebar>
     </div>
     <div class="main-content flex flex-col justify-start">
         <div class="title">
