--- a/src/app/components/modals/add-tag/add-tag.component.html
+++ b/src/app/components/modals/add-tag/add-tag.component.html
@@ -1,5 +1,5 @@
 <app-tag color="#E9E8E8" hoverColor="#848484" class="cursor-pointer" (click)="showModal()">+ {{ addTagModalTitle() }}</app-tag>
-<nz-modal class="add-tag-modal" nzMaskClosable="false" [nzTitle]="modalTitle" [(nzVisible)]="isVisible" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
+<nz-modal class="add-tag-modal" nzMaskClosable="false" [nzTitle]="modalTitle" [(nzVisible)]="isVisible" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk(addTagModalTitle())">
   <ng-template #modalTitle>{{ addTagModalTitle() }}</ng-template>
   <ng-container *nzModalContent>
       <div class="flex">
@@ -21,6 +21,6 @@
     </ng-container>
     <div class="flex justify-end" *nzModalFooter>
         <app-button class="me-[20px]" buttonType="Cancel" nzType="default" (click)="handleCancel()">Cancel</app-button>
-        <app-button buttonType="Ok" nzType="primary" (click)="handleOk()">{{ addTagModalTitle() === 'Add Tag' ? 'Add' : 'Select' }}</app-button>
+        <app-button buttonType="Ok" nzType="primary" (click)="handleOk(addTagModalTitle())">{{ addTagModalTitle() === 'Add Tag' ? 'Add' : 'Select' }}</app-button>
       </div>
   </nz-modal>
