--- a/src/app/components/modals/add-tag/add-tag.component.scss
+++ b/src/app/components/modals/add-tag/add-tag.component.scss
@@ -1,4 +1,6 @@
 @use "../../../../../public/assets/sass/abstracts/variables";
+@use 'sass:list';
+@use 'sass:math';
 $colors: variables.$warning-100, variables.$danger-50, variables.$secondary-50;
 $repeat: 10;
 
@@ -57,7 +59,7 @@ $repeat: 10;
                 nz-select-item:nth-child(#{$i}) {
                     border-radius: 7px;
                     margin-right: 10px;
-                    background-color: nth($colors, random(length($colors)));
+                    background-color: list.nth($colors, math.random(list.length($colors)));
                 }
             }
         }
