--- a/src/app/components/sidebar/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar/sidebar.component.html
@@ -2,10 +2,10 @@
     <div class="top-sidebar">
         <div class="top-header-sidebar flex flex-row justify-between items-center">
             <div class="avatar-section">
-                <app-avatar-profile [firstName]="user.firstName" [username]="user.username"
+                <app-avatar-profile [firstName]="user()!.firstName" [username]="user()!.username"
                     avatarSrc="../assets/images/avatar.jpg" [isCollapsed]="isCollapsed" (click)="openAccountModal()"
                     class="cursor-pointer"></app-avatar-profile>
-                <app-account (changeAccountEventEmitter)="updateAccount($event)" [account]="user"></app-account>
+                <app-account (changeAccountEventEmitter)="updateAccount($event)" [account]="user()!"></app-account>
             </div>
             <div class="hamburger-menu cursor-pointer" (click)="closeLeftSidebar(isCollapsed)">
                 @if (!isCollapsed) {
@@ -40,7 +40,7 @@
                 @for (tag of tags; track tag.id) {
                 <app-tag [tagId]="tag.id">{{ tag.name }}</app-tag>
                 }
-                <app-add-tag addTagModalTitle="Add Tag"></app-add-tag>
+                <app-add-tag addTagModalTitle="Add Tag" [user]="user()!"></app-add-tag>
                 } @else {
                 <app-tag [isCollapsed]="isCollapsed">{{ '...' }}</app-tag>
                 }
