[FEAT][UPDATE] Update the left sidebar collapsed animation, Create Add tags feature, Update the modals position

--- a/src/app/components/avatar-profile/avatar-profile.component.html
+++ b/src/app/components/avatar-profile/avatar-profile.component.html
@@ -1,5 +1,5 @@
 <div class="avatar-profile flex flex-row items-center" [class.avatar-profile-collapse]="isCollapsed()">
-        <img [src]="avatarSrc()" width="32" height="32" class="avatar-img" draggable="false" />
+        <img [src]="avatarSrc()" class="avatar-img" [class.avatar-img-collapsed]="isCollapsed()" draggable="false" />
     <div class="username-profile flex flex-col">
         <span class="fullname">
             {{ firstName() | fullName : lastName() }}
