--- a/src/app/components/sidebar/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar/sidebar.component.scss
@@ -9,7 +9,7 @@
     transition: width .6s;
 
     &.sidebar-collapse {
-        width: 93px;
+        width: 76px;
         transition: width .6s;
     }
 
@@ -18,6 +18,13 @@
         font-weight: bold;
         margin-top: 15px;
         margin-left: 4px;
+        transition: all 0.6s;
+
+        &.menu-title-collapsed {
+            font-size: 18px;
+            margin-left: 0;
+            transition: all 0.6s;
+        }
     }
 
     .search-section {
@@ -37,6 +44,10 @@
 
     .tags-list {
         margin-top: 25px;
+        max-height: 170px;
+        height: 170px;
+        overflow-y: auto;
+        overflow-x: hidden;
 
         .tags-list-title {
             font-size: 15px;
